--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
+    "dateformat": "^1.0.12",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7",
     "serve-favicon": "~2.3.0"
   }
 }
